--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Cork Bikes</title>
+    <link rel="shortcut icon" type="image/png" href="/static/icon-bike.png"/>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+<style>
+  body {
+    overflow: hidden;
+  }
+</style>
